Opened 10 years ago
Closed 10 years ago
#11737 closed bug (fixed)
[HaikuDepot] stays in Deskbar on close
Reported by: | diver | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/HaikuDepot | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Closing HaikuDepot while it's still populating list view of contents tab prevents it from quitting. Reproducible with haiku base package.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev48661. Thanks for testing!