HaikuDepot: Quitting while contents were populated dead-locked.

Fixes #11737